test/fail_compilation/imports/fail10528a.d

private enum string g_data = "asdfgh";

struct S
{
    private enum string data = "qwerty";
    private enum { value = 1 }
    private enum E { val = 1 }
}

class C
{
    private enum string data = "qwerty";
    private enum { value = 1 }
    private enum E { val = 1 }
}
